Add active processing clear controls
